# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantlab"
version = "0.1.0"
description = "Personal research lab for quantitative finance and machine learning"
authors = [{name = "AlmostAnna"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "matplotlib",
    "py_vollib",
]

[project.optional-dependencies]
dev = [
    "jupyterlab",
    "ipykernel",
    "pytest",
    "QuantLib",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "error",                     # Turn warnings into errors (fail CI on deprecations)
    "ignore::UserWarning",       # Optional: relax for specific cases
]
addopts = """
    --strict-markers
    --tb=short
    --doctest-modules
    --cov=src/quantlab
    --cov-report=term-missing
    --cov-report=html
"""
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, cross-module)",
    "ml: Machine learning-specific tests",
    "slow: Tests that take >1s (skip by default)",
]

