# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantlab"
version = "0.1.0"
description = "Personal research lab for quantitative finance and machine learning"
authors = [{name = "AlmostAnna"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "matplotlib",
    "py_vollib",
]

[project.optional-dependencies]
dev = [
    "jupyterlab",
    "ipykernel",
    "pytest",
    "QuantLib",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "error",                     # Turn warnings into errors (fail CI on deprecations)
    "ignore::UserWarning",       # Optional: relax for specific cases
]
addopts = """
    --strict-markers
    --tb=short
    --doctest-modules
    --cov=src/quantlab
    --cov-report=term-missing
    --cov-report=html
"""
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, cross-module)",
    "ml: Machine learning-specific tests",
    "slow: Tests that take >1s (skip by default)",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3


[tool.flake8]
max-line-length = 88
select = ["C", "E", "F", "W", "B", "B950"]  # Enable B950 for line length warnings
ignore = ["E203", "E501", "W503"]  # Line length handled by black
extend-ignore = ["E203", "W503"]
